--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,18 @@
     <TextView
         android:id="@+id/txt_Skip"
         android:text="Just Skip"
-        android:textSize="30dp"
+        android:textSize="24sp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/btn_login"
-        android:textColor="#030303"
+        android:textColor="#000000"
+        android:background="#E4C66D"
         android:text="Login"
         android:fontFamily="@font/bellerose"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:layout_above="@id/txt_Skip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
